<resources>
    <string name="app_name">科学计算器</string>
    <string name="display_hint">0</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_dot">.</string>
    <string name="button_plus">+</string>
    <string name="button_minus">−</string>
    <string name="button_multiply">×</string>
    <string name="button_divide">÷</string>
    <string name="button_equals">=</string>
    <string name="button_clear">C</string>
    <string name="button_clear_all">AC</string>
    <string name="button_backspace">⌫</string>
    <string name="button_pi">π</string>
    <string name="button_e">e</string>
    <string name="button_sqrt">√</string>
    <string name="button_power">x^y</string>
    <string name="button_square">x²</string>
    <string name="button_cube">x³</string>
    <string name="button_log">log</string>
    <string name="button_ln">ln</string>
    <string name="button_sin">sin</string>
    <string name="button_cos">cos</string>
    <string name="button_tan">tan</string>
    <string name="button_asin">sin⁻¹</string>
    <string name="button_acos">cos⁻¹</string>
    <string name="button_atan">tan⁻¹</string>
    <string name="button_factorial">n!</string>
    <string name="button_percent">%</string>
    <string name="button_reciprocal">1/x</string>
    <string name="button_plus_minus">±</string>
    <string name="button_left_paren">(</string>
    <string name="button_right_paren">)</string>
    <string name="button_fraction">a/b</string>
    <string name="button_degree">°</string>
    <string name="button_minute">′</string>
    <string name="button_second">″</string>
</resources>